# learnlens

./: .gitignore  BLOG.md  CHANGELOG.md  CITATION.cff  LICENSE  LearnLens_GRPO_Training.ipynb  README.md  demo.py  dswds  evaluate_any.py  pyproject.toml  test_openai.py
hf_space/: .gitattributes  BLOG.md  Dockerfile  README.md  app.py  inference.py  models.py  number_sort_environment.py  openenv.yaml
learnlens/: __init__.py  config.py  report.py  rubric.py  scorer.py  wrapper.py
learnlens/adapters/: __init__.py  custom_adapter.py  direct.py  gymnasium_adapter.py  mcp.py  openenv.py  ors.py  rllib_adapter.py  sb3_adapter.py
learnlens/envs/: __init__.py
learnlens/envs/number_sort/: __init__.py  environment.py
learnlens/envs/number_sort/server/: __init__.py
learnlens/probes/: __init__.py  base.py  consistency.py  generalization.py  hack_detection.py  reasoning.py
tests/: test_probes.py
