[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "learnlens"
version = "0.1.2"
description = "Universal evaluation layer for OpenEnv agentic RL environments. Measures WHAT an agent learned, not just HOW MUCH reward it got."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["rl", "llm", "openenv", "evaluation", "agents", "grpo", "learning-quality"]
authors = [{ name = "Ajay Bandiwaddar", email = "ajaybandiwaddar1@gmail.com" }]

dependencies = [
    "openenv-core>=0.2.3",
    "anthropic>=0.25.0",
    "rich>=13.0.0",
    "httpx>=0.27.0",
    "numpy>=1.24.0",
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "black", "ruff"]

[project.urls]
Repository = "https://github.com/AjayBandiwaddar/learnlens"

[tool.hatch.build.targets.wheel]
packages = ["learnlens"]